--- a/软件工程/火车售票管理系统/数据库/数据库表.md
+++ b/软件工程/火车售票管理系统/数据库/数据库表.md
@@ -18,15 +18,15 @@
 
 #### <span id="user_info">用户信息表 user_info</span>
 
-|    字段名称    | 字段类型 | 是否主键 | 是否外键 | 是否为空 |   字段含义   |                备注                 |
-| :------------: | :------: | :------: | :------: | :------: | :----------: | :---------------------------------: |
-|  **user_id**   |   int    |    是    |          |          |   用户编号   |               自增id                |
-| user_telephone |   int    |          |          |          | 用户手机号码 |                                     |
-| user_password  | varchar  |          |          |          |   用户密码   |              长度6-18               |
-|   user_name    | varchar  |          |          |          |   用户昵称   |       长度1-10，避免特殊字符        |
-|   user_type    | varchar  |          |          |          |   用户类型   | 普通用户 \| VIP用户 \| 管理员 \| 等 |
-|   user_state   | varchar  |          |          |          |   用户状态   |          正常、冻结、注销           |
-|  create_time   |   date   |          |          |          | 用户创建时间 |             yyyy-mm-dd              |
+|    字段名称    |  字段类型   | 是否主键 | 是否外键 | 是否为空 |   字段含义   |                备注                 |
+| :------------: | :---------: | :------: | :------: | :------: | :----------: | :---------------------------------: |
+|  **user_id**   |     int     |    是    |          |          |   用户编号   |               自增id                |
+| user_telephone |     int     |          |          |          | 用户手机号码 |                                     |
+| user_password  | varchar(20) |          |          |          |   用户密码   |              长度6-18               |
+|   user_name    | varchar(10) |          |          |          |   用户昵称   |       长度1-10，避免特殊字符        |
+|   user_type    | varchar(4)  |          |          |          |   用户类型   | 普通用户 \| VIP用户 \| 管理员 \| 等 |
+|   user_state   | varchar(2)  |          |          |          |   用户状态   |          正常、冻结、注销           |
+|  create_time   |    date     |          |          |          | 用户创建时间 |             yyyy-mm-dd              |
 
 
 
@@ -34,14 +34,14 @@
 
 注：出于偷懒，所有人都必须用居民身份证
 
-|       字段名称        | 字段类型 | 是否主键 |                是否外键                | 是否为空 |   字段含义   |         备注         |
-| :-------------------: | :------: | :------: | :------------------------------------: | :------: | :----------: | :------------------: |
-|   **passenger_id**    |   int    |    是    |                                        |          |   乘客编号   |        自增id        |
-| passenger_resident_id | varchar  |          |                                        |          |  居民身份证  |                      |
-|  *passenger_type_id*  |   int    |          | [乘客类型编码表](#passenger_type_info) |          | 乘客类型编号 |                      |
-|    *profession_id*    |   int    |          |     [职业编码表](#profession_info)     |    是    |   职业编号   |                      |
-|    passenger_name     | varchar  |          |                                        |          |   乘客姓名   |                      |
-|    passenger_state    | varchar  |          |                                        |          |   乘客状态   | 正常 \| 限制 \| 禁止 |
+|       字段名称        |  字段类型   | 是否主键 |                是否外键                | 是否为空 |   字段含义   |         备注         |
+| :-------------------: | :---------: | :------: | :------------------------------------: | :------: | :----------: | :------------------: |
+|   **passenger_id**    |     int     |    是    |                                        |          |   乘客编号   |        自增id        |
+| passenger_resident_id | varchar(20) |          |                                        |          |  居民身份证  |                      |
+|  *passenger_type_id*  |     int     |          | [乘客类型编码表](#passenger_type_info) |          | 乘客类型编号 |                      |
+|    *profession_id*    |     int     |          |     [职业编码表](#profession_info)     |    是    |   职业编号   |                      |
+|    passenger_name     | varchar(20) |          |                                        |          |   乘客姓名   |                      |
+|    passenger_state    | varchar(2)  |          |                                        |          |   乘客状态   | 正常 \| 限制 \| 禁止 |
 
 
 
@@ -58,20 +58,20 @@
 
 #### <span id="passenger_type_info">乘客类型编码表 passenger_type_info</span>
 
-|       字段名称        | 字段类型 | 是否主键 | 是否外键 | 是否为空 |   字段含义   |        备注         |
-| :-------------------: | :------: | :------: | :------: | :------: | :----------: | :-----------------: |
-| **passenger_type_id** |   int    |    是    |          |          | 乘客类型编号 |       自增id        |
-|  passenger_type_name  | varchar  |          |          |          | 乘客类型名称 | 成人 \| 儿童 \|学生 |
-|       discount        |   int    |          |          |          |     折扣     |          %          |
+|       字段名称        |  字段类型  | 是否主键 | 是否外键 | 是否为空 |   字段含义   |        备注         |
+| :-------------------: | :--------: | :------: | :------: | :------: | :----------: | :-----------------: |
+| **passenger_type_id** |    int     |    是    |          |          | 乘客类型编号 |       自增id        |
+|  passenger_type_name  | varchar(2) |          |          |          | 乘客类型名称 | 成人 \| 儿童 \|学生 |
+|       discount        |    int     |          |          |          |     折扣     |          %          |
 
 
 
 #### <span id="profession_info">职业编码表 profession_info</span>
 
-|     字段名称      | 字段类型 | 是否主键 | 是否外键 | 是否为空 | 字段含义 |  备注  |
-| :---------------: | :------: | :------: | :------: | :------: | :------: | :----: |
-| **profession_id** |   int    |    是    |          |          | 职业编号 | 自增id |
-|  profession_name  | varchar  |          |          |          | 职业名称 |        |
+|     字段名称      |  字段类型   | 是否主键 | 是否外键 | 是否为空 | 字段含义 |  备注  |
+| :---------------: | :---------: | :------: | :------: | :------: | :------: | :----: |
+| **profession_id** |     int     |    是    |          |          | 职业编号 | 自增id |
+|  profession_name  | varchar(10) |          |          |          | 职业名称 |        |
 
 
 
@@ -81,30 +81,30 @@
 
 #### <span id="province_info">省份编码表 province_info</span>
 
-|    字段名称     | 字段类型 | 是否主键 | 是否外键 | 是否为空 | 字段含义 |  备注  |
-| :-------------: | :------: | :------: | :------: | :------: | :------: | :----: |
-| **province_id** |   int    |    是    |          |          | 省份编号 | 自增id |
-|  province_name  | varchar  |          |          |          | 省份名称 |        |
+|    字段名称     |  字段类型   | 是否主键 | 是否外键 | 是否为空 | 字段含义 |  备注  |
+| :-------------: | :---------: | :------: | :------: | :------: | :------: | :----: |
+| **province_id** |     int     |    是    |          |          | 省份编号 | 自增id |
+|  province_name  | varchar(10) |          |          |          | 省份名称 |        |
 
 
 
 #### <span id="city_info">城市编码表 city_info</span>
 
-|   字段名称    | 字段类型 | 是否主键 |           是否外键           | 是否为空 |   字段含义   |  备注  |
-| :-----------: | :------: | :------: | :--------------------------: | :------: | :----------: | :----: |
-|  **city_id**  |   int    |    是    |                              |          |   城市编号   | 自增id |
-| *province_id* |   int    |          | [省份编码表](#province_info) |          | 所在省份编号 |        |
-|   city_name   | varchar  |          |                              |          |   城市名称   |        |
+|   字段名称    |  字段类型   | 是否主键 |           是否外键           | 是否为空 |   字段含义   |  备注  |
+| :-----------: | :---------: | :------: | :--------------------------: | :------: | :----------: | :----: |
+|  **city_id**  |     int     |    是    |                              |          |   城市编号   | 自增id |
+| *province_id* |     int     |          | [省份编码表](#province_info) |          | 所在省份编号 |        |
+|   city_name   | varchar(20) |          |                              |          |   城市名称   |        |
 
 
 
 #### <span id="train_station_info">火车站编码表 train_station_info</span>
 
-|       字段名称       | 字段类型 | 是否主键 |         是否外键         | 是否为空 |   字段含义   |  备注  |
-| :------------------: | :------: | :------: | :----------------------: | :------: | :----------: | :----: |
-| **train_station_id** |   int    |    是    |                          |          |  火车站编号  | 自增id |
-| *train_station_city* | varchar  |          | [城市编码表](#city_info) |          | 所在城市编号 |        |
-|  train_station_name  | varchar  |          |                          |          |  火车站名称  |        |
+|        字段名称         |  字段类型   | 是否主键 |         是否外键         | 是否为空 |   字段含义   |  备注  |
+| :---------------------: | :---------: | :------: | :----------------------: | :------: | :----------: | :----: |
+|  **train_station_id**   |     int     |    是    |                          |          |  火车站编号  | 自增id |
+| *train_station_city*_id |     int     |          | [城市编码表](#city_info) |          | 所在城市编号 |        |
+|   train_station_name    | varchar(20) |          |                          |          |  火车站名称  |        |
 
 
 
@@ -118,21 +118,21 @@
 
 #### <span id="train_info">火车信息表 train_info</span>
 
-|    字段名称     | 字段类型 | 是否主键 |              是否外键              | 是否为空 |   字段含义   |         备注         |
-| :-------------: | :------: | :------: | :--------------------------------: | :------: | :----------: | :------------------: |
-|  **train_id**   |   int    |    是    |                                    |          |   火车编号   |        自增id        |
-| *train_type_id* | varchar  |          | [火车类型编码表](#train_type_info) |          | 火车类型编号 |                      |
-|  train_number   |   int    |          |                                    |          |   火车车次   |                      |
-|   train_state   | varchar  |          |                                    |          |   火车状态   | 正常 \| 故障 \| 报废 |
+|    字段名称     |  字段类型  | 是否主键 |              是否外键              | 是否为空 |   字段含义   |         备注         |
+| :-------------: | :--------: | :------: | :--------------------------------: | :------: | :----------: | :------------------: |
+|  **train_id**   |    int     |    是    |                                    |          |   火车编号   |        自增id        |
+| *train_type_id* |    int     |          | [火车类型编码表](#train_type_info) |          | 火车类型编号 |                      |
+|  train_number   |    int     |          |                                    |          |   火车车次   |                      |
+|   train_state   | varchar(2) |          |                                    |          |   火车状态   | 正常 \| 故障 \| 报废 |
 
 
 
 #### <span id="train_type_info">火车类型编码表 train_type_info</span>
 
-|     字段名称      | 字段类型 | 是否主键 | 是否外键 | 是否为空 |   字段含义   |              备注              |
-| :---------------: | :------: | :------: | :------: | :------: | :----------: | :----------------------------: |
-| **train_type_id** |   int    |    是    |          |          | 火车类型编号 |             自增id             |
-|  train_type_name  | varchar  |          |          |          | 火车类型名称 | 绿皮火车 \| 动车 \| 高铁 \| 等 |
+|     字段名称      |  字段类型   | 是否主键 | 是否外键 | 是否为空 |   字段含义   |        备注        |
+| :---------------: | :---------: | :------: | :------: | :------: | :----------: | :----------------: |
+| **train_type_id** |     int     |    是    |          |          | 火车类型编号 |       自增id       |
+|  train_type_name  | varchar(10) |          |          |          | 火车类型名称 | 动车 \| 高铁 \| 等 |
 
 
 
@@ -153,12 +153,12 @@
 
 注：预计发车时间 or 实际发车时间，暂时挤在一起。
 
-|       字段名称        | 字段类型 | 是否主键 |                   是否外键                    | 是否为空 |       字段含义       |                      备注                      |
-| :-------------------: | :------: | :------: | :-------------------------------------------: | :------: | :------------------: | :--------------------------------------------: |
-| **train_running_id**  |   int    |    是    |                                               |          |     火车运行编号     |                     自增id                     |
-| *train_round_trip_id* |   int    |          | [火车往返时刻表](#train_round_trip_timetable) |          |    火车往返编号+     |                                                |
-|    departure_time     | datetime |          |                                               |          | 预计 or 实际发车时间 | 初始为往返时刻表的发车时间，若火车晚点需要修改 |
-|  train_running_state  | varchar  |          |                                               |          |     火车运行状态     |   未开始 \| 晚点 \| 取消 \| 运行中 \| 已完成   |
+|       字段名称        |  字段类型  | 是否主键 |                   是否外键                    | 是否为空 |       字段含义       |                      备注                      |
+| :-------------------: | :--------: | :------: | :-------------------------------------------: | :------: | :------------------: | :--------------------------------------------: |
+| **train_running_id**  |    int     |    是    |                                               |          |     火车运行编号     |                     自增id                     |
+| *train_round_trip_id* |    int     |          | [火车往返时刻表](#train_round_trip_timetable) |          |    火车往返编号+     |                                                |
+|    departure_time     |  datetime  |          |                                               |          | 预计 or 实际发车时间 | 初始为往返时刻表的发车时间，若火车晚点需要修改 |
+|  train_running_state  | varchar(4) |          |                                               |          |     火车运行状态     |   未开始 \| 晚点 \| 取消 \| 运行中 \| 已完成   |
 
 
 
@@ -171,13 +171,13 @@
 
 注：不同类型的火车拥有不同类型的车厢，车厢类型直接决定座位类型。绿皮火车中有【硬座、软座、硬卧、软卧等】，动车、高铁中有【一等、二等座等】。
 
-|        字段名称        | 字段类型 | 是否主键 |              是否外键              | 是否为空 |   字段含义   |                        备注                        |
-| :--------------------: | :------: | :------: | :--------------------------------: | :------: | :----------: | :------------------------------------------------: |
-|   **cabin_type_id**    |   int    |    是    |                                    |          | 车厢类型编号 |                       自增id                       |
-|    *train_type_id*     |   int    |          | [火车类型编码表](#train_type_info) |          | 火车类型编号 |                                                    |
-|    cabin_type_name     | varchar  |          |                                    |          | 车厢类型名称 | 硬座 \| 软座 \| 硬卧 \| 软卧 \| 一等 \| 二等 \| 等 |
-|    cabin_row_amount    |   int    |          |                                    |          | 车厢座位排数 |                                                    |
-| cabin_row_seats_amount |   int    |          |                                    |          | 每排座位数量 |                                                    |
+|        字段名称        |  字段类型  | 是否主键 |              是否外键              | 是否为空 |   字段含义   |                        备注                        |
+| :--------------------: | :--------: | :------: | :--------------------------------: | :------: | :----------: | :------------------------------------------------: |
+|   **cabin_type_id**    |    int     |    是    |                                    |          | 车厢类型编号 |                       自增id                       |
+|    *train_type_id*     |    int     |          | [火车类型编码表](#train_type_info) |          | 火车类型编号 |                                                    |
+|    cabin_type_name     | varchar(2) |          |                                    |          | 车厢类型名称 | 硬座 \| 软座 \| 硬卧 \| 软卧 \| 一等 \| 二等 \| 等 |
+|    cabin_row_amount    |    int     |          |                                    |          | 车厢座位排数 |                                                    |
+| cabin_row_seats_amount |    int     |          |                                    |          | 每排座位数量 |                                                    |
 
 
 
@@ -198,13 +198,13 @@
 
 注：不同类型火车、车厢可能拥有不同的结构，其座位布局也有不同。处于偷懒，把所有座位都简化成第几排第几列。
 
-|     字段名称      | 字段类型 | 是否主键 |         是否外键          | 是否为空 | 字段含义 |          备注          |
-| :---------------: | :------: | :------: | :-----------------------: | :------: | :------: | :--------------------: |
-|    **seat_id**    |   int    |    是    |                           |          | 座位编号 |         自增id         |
-|    *cabin_id*     |   int    |          | [车厢信息表](#cabin_info) |          | 车厢编号 |                        |
-|  seat_row_number  |   int    |          |                           |          | 座位排号 |                        |
-| seat_row_position | varchar  |          |                           |          | 排内位置 |          A-E           |
-|    seat_price     |   int    |          |                           |          | 座位单价 | 特殊乘客用单价乘以折扣 |
+|     字段名称      |  字段类型  | 是否主键 |         是否外键          | 是否为空 | 字段含义 |          备注          |
+| :---------------: | :--------: | :------: | :-----------------------: | :------: | :------: | :--------------------: |
+|    **seat_id**    |    int     |    是    |                           |          | 座位编号 |         自增id         |
+|    *cabin_id*     |    int     |          | [车厢信息表](#cabin_info) |          | 车厢编号 |                        |
+|  seat_row_number  |    int     |          |                           |          | 座位排号 |                        |
+| seat_row_position | varchar(1) |          |                           |          | 排内位置 |          A-E           |
+|    seat_price     |    int     |          |                           |          | 座位单价 | 特殊乘客用单价乘以折扣 |
 
 
 
@@ -229,10 +229,10 @@
 
 注：订单必须支付完成才能出票
 
-|      字段名称       | 字段类型 | 是否主键 | 是否外键 | 是否为空 |   字段含义   |                             备注                             |
-| :-----------------: | :------: | :------: | :------: | :------: | :----------: | :----------------------------------------------------------: |
-| **ticket_state_id** |   int    |    是    |          |          | 订单状态编号 |                            自增id                            |
-|  ticket_state_name  | varchar  |    是    |          |          | 订单状态名称 | 未出票 \| 已取消 \| 已改签 \| 未出行 \| 已过期 \| 执行中 \| 已完成 |
+|      字段名称       |  字段类型  | 是否主键 | 是否外键 | 是否为空 |   字段含义   |                             备注                             |
+| :-----------------: | :--------: | :------: | :------: | :------: | :----------: | :----------------------------------------------------------: |
+| **ticket_state_id** |    int     |    是    |          |          | 订单状态编号 |                            自增id                            |
+|  ticket_state_name  | varchar(5) |    是    |          |          | 订单状态名称 | 未出票 \| 已取消 \| 已改签 \| 未出行 \| 已过期 \| 执行中 \| 已完成 |
 
 
 
@@ -240,23 +240,23 @@
 
 注：【订单信息表】中的改签表示这是一次改签后的订单，【订单状态编码表】中的改签表示这次订单已经被改签了。
 
-|     字段名称     | 字段类型 | 是否主键 |              是否外键               | 是否为空 |   字段含义   |  备注  |
-| :--------------: | :------: | :------: | :---------------------------------: | :------: | :----------: | :----: |
-|   **order_id**   |   int    |    是    |                                     |          |   订单编号   | 自增id |
-|    *user_id*     |   int    |          |      [用户信息表](#user_info)       |          |  购票人编号  |        |
-|   *ticket_id*    |   int    |          |     [车票信息表](#ticket_info)      |          |   车票编号   |        |
-| *order_state_id* |   int    |          | [订单状态编码表](#order_state_info) |          | 订单状态编号 |        |
-|    is_changed    | varchar  |          |                                     |          | 是否为改签票 |        |
-|   create_time    | datetime |          |                                     |          | 订单创建时间 |        |
+|     字段名称     |  字段类型  | 是否主键 |              是否外键               | 是否为空 |    字段含义    |  备注  |
+| :--------------: | :--------: | :------: | :---------------------------------: | :------: | :------------: | :----: |
+|   **order_id**   |    int     |    是    |                                     |          |    订单编号    | 自增id |
+|    *user_id*     |    int     |          |      [用户信息表](#user_info)       |          |   购票人编号   |        |
+|   *ticket_id*    |    int     |          |     [车票信息表](#ticket_info)      |          |    车票编号    |        |
+| *order_state_id* |    int     |          | [订单状态编码表](#order_state_info) |          |  订单状态编号  |        |
+|    is_changed    | varchar(2) |          |                                     |          | 是否为改签订单 |        |
+|   create_time    |  datetime  |          |                                     |          |  订单创建时间  |        |
 
 
 
 #### <span id="order_state_info">订单状态编码表 order_state_info</span>
 
-|      字段名称      | 字段类型 | 是否主键 | 是否外键 | 是否为空 |   字段含义   |                     备注                     |
-| :----------------: | :------: | :------: | :------: | :------: | :----------: | :------------------------------------------: |
-| **order_state_id** |   int    |    是    |          |          | 订单状态编号 |                    自增id                    |
-|  order_state_name  | varchar  |          |          |          | 订单状态名称 | 未支付 \| 已支付 \| 已退票 \| 已改签 \| 完成 |
+|      字段名称      |  字段类型  | 是否主键 | 是否外键 | 是否为空 |   字段含义   |                     备注                     |
+| :----------------: | :--------: | :------: | :------: | :------: | :----------: | :------------------------------------------: |
+| **order_state_id** |    int     |    是    |          |          | 订单状态编号 |                    自增id                    |
+|  order_state_name  | varchar(5) |          |          |          | 订单状态名称 | 未支付 \| 已支付 \| 已退票 \| 已改签 \| 完成 |
 
 
 
